# fossapi

./: .nudge.yaml  CLAUDE.md  Cargo.toml  README.md
.eliza/: claude.md  project.yaml
.eliza/lib/: script-harness.sh
.github/workflows/: release.yml
examples/: basic.rs
src/: client.rs  error.rs  lib.rs  output.rs  pagination.rs
src/cli/: mod.rs
src/mcp/: mod.rs  params.rs  server.rs
src/mock_server/: CLAUDE.md  fixtures.rs  mod.rs  server.rs  state.rs
src/mock_server/handlers/: dependencies.rs  issues.rs  mod.rs  projects.rs  revisions.rs
src/models/: dependency.rs  issue.rs  mod.rs  project.rs  revision.rs  snippet.rs
src/traits/: get.rs  list.rs  mod.rs  update.rs
tests/: cli_args.rs  cli_get.rs  cli_list.rs  cli_output.rs  cli_update.rs  e2e_mock_server.rs  mcp_deps.rs  mcp_get.rs  mcp_server.rs  snippet.rs
tests/fixtures/snippets/: SCHEMA.md  match-details-partial.json  match-details-small.json  paths-sources.json  paths.json  snippet-details.json  snippets.json
