[package]
name = "fossapi"
version = "0.1.0"
edition = "2021"
description = "Rust client library for the FOSSA REST API"
license = "MIT"
repository = "https://github.com/fossas/fossapi"
keywords = ["fossa", "api", "client", "sbom", "dependencies"]
categories = ["api-bindings", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["base64"] }

# URL handling
url = { version = "2", features = ["serde"] }
urlencoding = "2"

# Error handling
thiserror = "1"

# Async traits
async-trait = "0.1"

# Tracing/logging
tracing = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
tabled = "0.17"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
serde_qs = "0.13"
wiremock = "0.6"

[[bin]]
name = "fossapi"
path = "src/bin/fossapi.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"
