[package]
name = "fossapi"
version = "0.1.0"
edition = "2021"
description = "Rust client library for the FOSSA REST API"
license = "MIT"
repository = "https://github.com/fossas/fossapi"
keywords = ["fossa", "api", "client", "sbom", "dependencies"]
categories = ["api-bindings", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["base64"] }
schemars = "0.8"

# MCP server
rmcp = { version = "0.1", features = ["transport-io"] }

# URL handling
url = { version = "2", features = ["serde"] }
urlencoding = "2"

# Error handling
thiserror = "1"

# Async traits
async-trait = "0.1"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4", features = ["derive", "env"] }
tabled = "0.17"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Mock server dependencies (feature-gated, for testing)
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }

[features]
default = []
test-server = ["dep:axum", "dep:tower"]

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
serde_qs = "0.13"
wiremock = "0.6"

[[bin]]
name = "fossapi"
path = "src/bin/fossapi.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Conditions to По on how you installed cargo-dist)
cargo-dist-version = "0.27.0"
# CI backends to support
ci = "github"
# Target platforms to build for
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
