[package]
name = "fossapi"
version = "0.2.1"
edition = "2021"
description = "Rust client library for the FOSSA REST API"
license = "MIT"
repository = "https://github.com/fossas/fossapi"
keywords = ["fossa", "api", "client", "sbom", "dependencies"]
categories = ["api-bindings", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client. rustls (not native OpenSSL) so the x86_64-unknown-linux-musl
# release build doesn't fail trying to link openssl-sys when cross-compiling.
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "charset", "http2", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["base64"] }
schemars = "0.8"

# MCP server
rmcp = { version = "0.1", features = ["transport-io"] }

# URL handling
url = { version = "2", features = ["serde"] }
urlencoding = "2"

# Error handling
thiserror = "1"

# Async traits
async-trait = "0.1"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4", features = ["derive", "env"] }
tabled = "0.17"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Mock server dependencies (feature-gated, for testing)
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }

[features]
default = []
test-server = ["dep:axum", "dep:tower"]

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
serde_qs = "0.13"
wiremock = "0.6"

[[bin]]
name = "fossapi"
path = "src/bin/fossapi.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.27.0"
# CI backends to support
ci = "github"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"

# Pin CI runners to images GitHub still hosts. dist 0.27 defaults to
# ubuntu-20.04 / windows-2019, both retired, so jobs requesting them queue
# until the 24h timeout and the PR check sits "pending" forever.
[workspace.metadata.dist.github-custom-runners]
global = "ubuntu-22.04"
aarch64-apple-darwin = "macos-14"
x86_64-apple-darwin = "macos-13"
x86_64-unknown-linux-gnu = "ubuntu-22.04"
x86_64-unknown-linux-musl = "ubuntu-22.04"
x86_64-pc-windows-msvc = "windows-2022"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
